--- a/package.json
+++ b/package.json
@@ -7,22 +7,32 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
-    "package": "plasmo package"
+    "package": "plasmo package",
+    "test": "jest"
   },
   "dependencies": {
+    "@plasmohq/messaging": "^0.6.2",
+    "@plasmohq/storage": "^1.11.0",
     "plasmo": "0.88.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.4.1"
+    "react-dom": "18.2.0"
+  },
+  "resolutions": {
+    "msgpackr": "^1.10.1"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@types/chrome": "0.0.258",
+    "@types/jest": "^29.5.12",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "autoprefixer": "^10.4.19",
+    "jest": "^29.7.0",
     "postcss": "8.4.33",
     "prettier": "3.2.4",
+    "tailwindcss": "3.4.1",
+    "ts-jest": "^29.2.4",
     "typescript": "5.3.3"
   },
   "manifest": {
